--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "install": "^0.12.1",
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-app-intro-slider": "^1.0.1",
-    "react-native-camera": "^1.3.0",
+    "react-native-camera": "1.1.4",
     "react-native-contacts": "^2.2.4",
     "react-native-fingerprint-scanner": "^2.5.0",
     "react-native-firebase": "^5.0.0",
-    "react-native-qrcode-scanner": "^1.1.0",
+    "react-native-permissions": "^1.1.1",
+    "react-native-qrcode-scanner": "1.0.1",
     "react-native-router-flux": "^4.0.5",
     "react-native-unified-contacts": "^1.6.2"
   },
